--- a/index.html
+++ b/index.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <link rel="stylesheet" href="./assets/css/tailwind.css"/>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <link rel="stylesheet" href="./assets/css/font-awesome.css"/>
+    <link rel="stylesheet" href="./assets/css/animate.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;display=swap&amp;subset=devanagari,latin-ext" rel="stylesheet"/>
+    <title>Portfolio</title>
   </head>
   <body>
-    <h1>Test</h1>
+    <div class="w-full h-screen my-bg" id="header">
+      <div class="h-20 w-full" id="navbar">
+        <div class="my-container justify-between flex h-20 m-auto py-6">
+          <h2 class="ml-8 text-2xl font-medium title text-white"><a class="hover:text-gray-400" href="#">TD</a></h2>
+          <ul class="flex justify-around w-2/5">
+            <li key="0"><a class="text-sm text-white hover:text-gray-400" href="#home">HOME</a></li>
+            <li key="1"><a class="text-sm text-white hover:text-gray-400" href="#about">ABOUT</a></li>
+            <li key="2"><a class="text-sm text-white hover:text-gray-400" href="#portfolio">PORTFOLIO</a></li>
+            <li key="3"><a class="text-sm text-white hover:text-gray-400" href="#services">SERVICES</a></li>
+            <li key="4"><a class="text-sm text-white hover:text-gray-400" href="#contact">CONTACT</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="w-48 h-48 m-auto my-bg rounded-full me-img"></div>
+      <div class="text-center">
+        <h1 class="text-4xl text-white mt-6 font-medium animated fadeInUp slow">Thomas Deman</h1>
+        <p class="text-white font-thin animated fadeInUp slow">Web Developer</p>
+      </div><a href="#about"><i class="fas fa-arrow-down text-2xl text-white absolute my-arrow hover:text-gray-400"></i></a>
+    </div>
+    <div class="h-screen w-full" id="about">
+      <div class="w-full text-center">
+        <h2 class="text-3xl font-medium mt-20 subtitles relative inline-block">About Me</h2>
+      </div>
+      <div class="flex justify-around pt-40 my-container">
+        <div class="w-1/3 px-8">
+          <p class="font-thin text-sm leading-relaxed text-gray-800">Welcome to my Portfolio ! I'm a Junior web developer from Brussels, Belgium. I just finished a 6 months intensive full-stack web development formation. I've learned different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php, Wordpress and Laravel.</p>
+        </div>
+        <div class="w-1/3 px-8">
+          <p class="font-thin text-sm leading-relaxed text-gray-800">I'm interested in the entire front-end spectrum of web development. I'm a well organised person, independant with high attention to detail. I'm naturally curious, and perpetually working on improving my skills.</p>
+        </div>
+        <div class="w-1/3 px-5">
+          <div class="shadow w-5/6 bg-gray-200 rounded mb-5">
+            <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 96%">Html/Css (Sass)</div>
+          </div>
+          <div class="shadow w-5/6 bg-gray-200 rounded mb-5">
+            <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 88%">Javascript</div>
+          </div>
+          <div class="shadow w-5/6 bg-gray-200 rounded mb-5">
+            <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 85%">React</div>
+          </div>
+          <div class="shadow w-5/6 bg-gray-200 rounded mb-5">
+            <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 80%">Wordpress</div>
+          </div>
+          <div class="shadow w-5/6 bg-gray-200 rounded mb-5">
+            <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 75%">Laravel</div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
