adding new typo, adding future sass files, about done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css"/>
     <link rel="stylesheet" href="./assets/css/font-awesome.css"/>
     <link rel="stylesheet" href="./assets/css/animate.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;display=swap&amp;subset=devanagari,latin-ext" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Heebo:100,300,400,500,700,800,900&amp;display=swap" rel="stylesheet"/>
     <title>Portfolio</title>
   </head>
   <body>
@@ -27,39 +27,59 @@
       </div>
       <div class="w-48 h-48 m-auto my-bg rounded-full me-img"></div>
       <div class="text-center">
-        <h1 class="text-4xl text-white mt-6 font-medium animated fadeInUp slow">Thomas Deman</h1>
-        <p class="text-white font-thin animated fadeInUp slow">Web Developer</p>
+        <h1 class="text-4xl tracking-wide text-white mt-6 font-medium animated fadeInUp slow">Thomas Deman</h1>
+        <p class="text-white font-hairline animated fadeInUp slow">Web Developer</p>
       </div><a href="#about"><i class="fas fa-arrow-down text-2xl text-white absolute my-arrow hover:text-gray-400"></i></a>
     </div>
-    <div class="h-screen w-full" id="about">
+    <div class="w-full" id="about">
       <div class="w-full text-center">
-        <h2 class="text-3xl font-medium mt-20 subtitles relative inline-block">About Me</h2>
+        <h2 class="text-3xl mt-20 subtitles relative inline-block">About Me</h2>
       </div>
-      <div class="flex justify-around pt-40 my-container">
+      <div class="flex justify-around pt-32 my-container">
         <div class="w-1/3 px-8">
-          <p class="font-thin text-sm leading-relaxed text-gray-800">Welcome to my Portfolio ! I'm a Junior web developer from Brussels, Belgium. I just finished a 6 months intensive full-stack web development formation. I've learned different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php, Wordpress and Laravel.</p>
+          <p class="font-hairline leading-relaxed text-gray-800">Welcome to my Portfolio ! I'm a Junior web developer from Brussels, Belgium. I just finished a 6 months intensive full-stack web development formation. I've learned different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php, Wordpress and Laravel.</p>
         </div>
         <div class="w-1/3 px-8">
-          <p class="font-thin text-sm leading-relaxed text-gray-800">I'm interested in the entire front-end spectrum of web development. I'm a well organised person, independant with high attention to detail. I'm naturally curious, and perpetually working on improving my skills.</p>
+          <p class="font-hairline leading-relaxed text-gray-800">I'm interested in the entire front-end spectrum of web development. I'm a well organised person, independant with high attention to detail. I'm naturally curious, and perpetually working on improving my skills.</p>
         </div>
         <div class="w-1/3 px-5">
-          <div class="shadow w-5/6 bg-gray-200 rounded mb-5">
+          <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="0">
             <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 96%">Html/Css (Sass)</div>
           </div>
-          <div class="shadow w-5/6 bg-gray-200 rounded mb-5">
+          <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="1">
             <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 88%">Javascript</div>
           </div>
-          <div class="shadow w-5/6 bg-gray-200 rounded mb-5">
+          <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="2">
             <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 85%">React</div>
           </div>
-          <div class="shadow w-5/6 bg-gray-200 rounded mb-5">
+          <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="3">
             <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 80%">Wordpress</div>
           </div>
-          <div class="shadow w-5/6 bg-gray-200 rounded mb-5">
+          <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="4">
             <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 75%">Laravel</div>
           </div>
         </div>
       </div>
+      <div class="my-container flex justify-around pt-24">
+        <div class="text-center" key="0">
+          <p class="text-3xl font-thin">1160</p>
+          <p class="font-hairline">Hours of Code</p>
+        </div>
+        <div class="text-center" key="1">
+          <p class="text-3xl font-thin">80</p>
+          <p class="font-hairline">Hours of Meetings</p>
+        </div>
+        <div class="text-center" key="2">
+          <p class="text-3xl font-thin">25</p>
+          <p class="font-hairline">Projects Done</p>
+        </div>
+        <div class="text-center" key="3">
+          <p class="text-3xl font-thin">80</p>
+          <p class="font-hairline">Hours of Research</p>
+        </div>
+      </div>
     </div>
+    <div class="h-screen" id="services">hi</div>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
