--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="w-full h-screen my-bg" id="header">
-      <div class="h-20 w-full" id="navbar">
+      <div class="h-20 w-full fixed top-0" id="navbar">
         <div class="my-container justify-between flex h-20 m-auto py-6">
           <h2 class="ml-8 text-2xl font-medium title text-white"><a class="hover:text-gray-400" href="#">TD</a></h2>
           <ul class="flex justify-around w-2/5">
@@ -25,16 +25,18 @@
           </ul>
         </div>
       </div>
-      <div class="w-48 h-48 m-auto my-bg rounded-full me-img"></div>
+      <div class="w-full pt-48">
+        <div class="w-48 h-48 m-auto my-bg rounded-full me-img"></div>
+      </div>
       <div class="text-center">
         <h1 class="text-4xl tracking-wide text-white mt-6 font-medium animated fadeInUp slow">Thomas Deman</h1>
         <p class="text-white font-hairline animated fadeInUp slow">Web Developer</p>
       </div><a href="#about"><i class="fas fa-arrow-down text-2xl text-white absolute my-arrow hover:text-gray-400"></i></a>
     </div>
     <div class="w-full" id="about">
-      <div class="w-full text-center">
-        <h2 class="text-3xl mt-20 subtitles relative inline-block">About Me</h2>
-      </div>
+          <div class="w-full text-center">
+            <h2 class="text-3xl mt-20 subtitles relative inline-block">About Me</h2>
+          </div>
       <div class="flex justify-around pt-32 my-container">
         <div class="w-1/3 px-8">
           <p class="font-hairline leading-relaxed text-gray-800">Welcome to my Portfolio ! I'm a Junior web developer from Brussels, Belgium. I just finished a 6 months intensive full-stack web development formation. I've learned different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php, Wordpress and Laravel.</p>
@@ -79,7 +81,11 @@
         </div>
       </div>
     </div>
-    <div class="h-screen" id="services">hi</div>
+    <div class="h-screen" id="services">hi
+          <div class="w-full text-center">
+            <h2 class="text-3xl mt-20 subtitles relative inline-block">What I Do</h2>
+          </div>
+    </div>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
