adding fixed navbar and bug correction

--- a/index.html
+++ b/index.html
@@ -81,9 +81,14 @@
         </div>
       </div>
     </div>
-    <div class="h-screen" id="services">hi
+    <div class="h-screen" id="services">
           <div class="w-full text-center">
             <h2 class="text-3xl mt-20 subtitles relative inline-block">What I Do</h2>
+          </div>
+    </div>
+    <div class="w-full" id="about">
+          <div class="w-full text-center">
+            <h2 class="text-3xl mt-20 subtitles relative inline-block">Contact</h2>
           </div>
     </div>
     <script src="./assets/js/main.js"></script>
