adding box for services, footer in progress

--- a/index.html
+++ b/index.html
@@ -85,11 +85,37 @@
           <div class="w-full text-center">
             <h2 class="text-3xl mt-20 subtitles relative inline-block">What I Do</h2>
           </div>
+      <div class="my-container">
+        <div class="flex mt-32 w-full justify-between">
+          <div class="w-1/3 border border-gray-400 rounded h-64 mx-6 text-center relative bottom-0 services-animation" key="0"><i class="fas fa-pencil-alt text-3xl mt-10"></i>
+            <h3 class="text-xl mt-4">Web Design</h3>
+            <p class="font-hairline mt-6 px-10">Building modern web design for your site or web Application</p>
+          </div>
+          <div class="w-1/3 border border-gray-400 rounded h-64 mx-6 text-center relative bottom-0 services-animation" key="1"><i class="fas fa-globe text-3xl mt-10"></i>
+            <h3 class="text-xl mt-4">Web Development</h3>
+            <p class="font-hairline mt-6 px-10">Coding your site properly with the right technology.</p>
+          </div>
+          <div class="w-1/3 border border-gray-400 rounded h-64 mx-6 text-center relative bottom-0 services-animation" key="2"><i class="fas fa-camera text-3xl mt-10"></i>
+            <h3 class="text-xl mt-4">Photoshoot</h3>
+            <p class="font-hairline mt-6 px-10">Graduated from High school in Photography, I can take professional pictures for your projects.</p>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="w-full" id="about">
           <div class="w-full text-center">
             <h2 class="text-3xl mt-20 subtitles relative inline-block">Contact</h2>
           </div>
+    </div>
+    <div class="bg-black" id="footer">
+      <div class="flex justify-around pt-24">
+        <p class="text-gray-500">&copy; 2019, Thomas Deman, All Rights Reserved.</p>
+        <ul>
+          <li><a> </a></li>
+          <li><a> </a></li>
+          <li><a> </a></li>
+        </ul>
+      </div>
     </div>
     <script src="./assets/js/main.js"></script>
   </body>
