--- a/index.html
+++ b/index.html
@@ -107,15 +107,17 @@
             <h2 class="text-3xl mt-20 subtitles relative inline-block">Contact</h2>
           </div>
     </div>
-    <div class="bg-black" id="footer">
-      <div class="flex justify-around pt-24">
-        <p class="text-gray-500">&copy; 2019, Thomas Deman, All Rights Reserved.</p>
-        <ul>
-          <li><a> </a></li>
-          <li><a> </a></li>
-          <li><a> </a></li>
-        </ul>
-      </div>
+    <div class="bg-black relative" id="footer">
+      <div class="my-container">
+        <div class="flex w-full justify-between pt-32">
+          <p class="text-gray-500">&copy; 2019, Thomas Deman, All Rights Reserved.</p>
+          <ul class="flex">
+            <li key="0"><a href="https://www.linkedin.com/in/thomas-deman-168562193/" target="_blank"><i class="fab fa-linkedin-in text-gray-500 text-lg mx-4 hover:text-gray-200"></i></a></li>
+            <li key="1"><a href="mailto:dt.deman.thomas@gmail.com" target="_blank"><i class="fas fa-envelope text-gray-500 text-lg mx-4 hover:text-gray-200"></i></a></li>
+            <li key="2"><a href="https://www.instagram.com/molengeek/" target="_blank"><i class="fab fa-instagram text-gray-500 text-lg mx-4 hover:text-gray-200"></i></a></li>
+          </ul>
+        </div>
+      </div><a class="to-header absolute" href="#header"><i class="fas fa-arrow-up text-gray-500 text-2xl hover:text-gray-200"></i></a>
     </div>
     <script src="./assets/js/main.js"></script>
   </body>
