--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <div class="w-full h-screen my-bg" id="header">
+    <div class="w-full h-screen my-bg" id="home">
       <div class="h-20 w-full fixed top-0" id="navbar">
         <div class="my-container justify-between flex h-20 m-auto py-6">
           <h2 class="ml-8 text-2xl font-medium title text-white"><a class="hover:text-gray-400" href="#">TD</a></h2>
@@ -102,10 +102,53 @@
         </div>
       </div>
     </div>
-    <div class="w-full" id="about">
+    <div class="w-full" id="contact">
           <div class="w-full text-center">
             <h2 class="text-3xl mt-20 subtitles relative inline-block">Contact</h2>
           </div>
+      <div class="my-container">
+        <div class="flex w-full mt-24">
+          <div class="w-1/3 pt-8 px-10">
+            <div class="my-8">
+              <p class="text-lg">Phone:</p>
+              <p class="text-gray-600 font-light">Ask me by mail</p>
+            </div>
+            <div class="my-8">
+              <p class="text-lg">Email:</p>
+              <p class="text-gray-600 font-light">dt.deman.thomas@gmail.com</p>
+            </div>
+            <div class="my-8">
+              <p class="text-lg">Address:</p>
+              <p class="text-gray-600 font-light">Place de la Minoterie 10, 1080 Molenbeek-Saint-Jean (Molengeek)</p>
+            </div>
+          </div>
+          <div class="w-2/3">
+            <form>
+              <div class="flex m-4">
+                <div class="w-1/2 mr-8">
+                  <input class="w-full border border-gray-400 p-4 bg-transparent" placeholder="Name"/>
+                </div>
+                <div class="w-1/2">
+                  <input class="w-full border border-gray-400 p-4 bg-transparent" placeholder="Email"/>
+                </div>
+              </div>
+              <div class="flex m-4">
+                <div class="w-full">
+                  <input class="w-full border border-gray-400 p-4 bg-transparent" placeholder="Subject"/>
+                </div>
+              </div>
+              <div class="flex m-4">
+                <div class="w-full">
+                  <textarea class="w-full border border-gray-400 p-4 bg-transparent" placeholder="Message" rows="8"></textarea>
+                </div>
+              </div>
+              <div class="flex justify-end m-4">
+                <button class="border border-black py-4 px-6 text-black contact-button hover:text-white" type="submit">Send message</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="bg-black relative" id="footer">
       <div class="my-container">
@@ -117,7 +160,7 @@
             <li key="2"><a href="https://www.instagram.com/molengeek/" target="_blank"><i class="fab fa-instagram text-gray-500 text-lg mx-4 hover:text-gray-200"></i></a></li>
           </ul>
         </div>
-      </div><a class="to-header absolute" href="#header"><i class="fas fa-arrow-up text-gray-500 text-2xl hover:text-gray-200"></i></a>
+      </div><a class="to-header absolute" href="#home"><i class="fas fa-arrow-up text-gray-500 text-2xl hover:text-gray-200"></i></a>
     </div>
     <script src="./assets/js/main.js"></script>
   </body>
