--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div class="w-full h-screen my-bg" id="home">
       <div class="h-20 w-full fixed top-0" id="navbar">
         <div class="my-container justify-between flex h-20 m-auto py-6">
-          <h2 class="ml-8 text-2xl font-medium title text-white"><a class="hover:text-gray-400" href="#">TD</a></h2>
+          <h2 class="ml-8 text-2xl title text-white">TD</h2>
           <ul class="flex justify-around w-2/5">
-            <li key="0"><a class="text-sm text-white hover:text-gray-400" href="#home">HOME</a></li>
-            <li key="1"><a class="text-sm text-white hover:text-gray-400" href="#about">ABOUT</a></li>
-            <li key="2"><a class="text-sm text-white hover:text-gray-400" href="#portfolio">PORTFOLIO</a></li>
-            <li key="3"><a class="text-sm text-white hover:text-gray-400" href="#services">SERVICES</a></li>
-            <li key="4"><a class="text-sm text-white hover:text-gray-400" href="#contact">CONTACT</a></li>
+            <li key="0"><a class="text-xs text-white hover:text-gray-500" href="#home">HOME</a></li>
+            <li key="1"><a class="text-xs text-white hover:text-gray-500" href="#about">ABOUT</a></li>
+            <li key="2"><a class="text-xs text-white hover:text-gray-500" href="#portfolio">PORTFOLIO</a></li>
+            <li key="3"><a class="text-xs text-white hover:text-gray-500" href="#services">SERVICES</a></li>
+            <li key="4"><a class="text-xs text-white hover:text-gray-500" href="#contact">CONTACT</a></li>
           </ul>
         </div>
       </div>
@@ -52,13 +52,13 @@
             <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 88%">Javascript</div>
           </div>
           <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="2">
-            <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 85%">React</div>
+            <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 85%">React/Vue</div>
           </div>
           <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="3">
             <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 80%">Wordpress</div>
           </div>
           <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="4">
-            <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 75%">Laravel</div>
+            <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 75%">PHP</div>
           </div>
         </div>
       </div>
@@ -76,7 +76,7 @@
           <p class="font-hairline">Projects Done</p>
         </div>
         <div class="text-center" key="3">
-          <p class="text-3xl font-thin">80</p>
+          <p class="text-3xl font-thin">100</p>
           <p class="font-hairline">Hours of Research</p>
         </div>
       </div>
@@ -87,15 +87,15 @@
           </div>
       <div class="my-container">
         <div class="flex mt-32 w-full justify-between">
-          <div class="w-1/3 border border-gray-400 rounded h-64 mx-6 text-center relative bottom-0 services-animation" key="0"><i class="fas fa-pencil-alt text-3xl mt-10"></i>
+          <div class="w-1/3 border border-gray-300 rounded h-64 mx-6 text-center relative bottom-0 services-animation" key="0"><i class="fas fa-pencil-alt text-3xl mt-10"></i>
             <h3 class="text-xl mt-4">Web Design</h3>
             <p class="font-hairline mt-6 px-10">Building modern web design for your site or web Application</p>
           </div>
-          <div class="w-1/3 border border-gray-400 rounded h-64 mx-6 text-center relative bottom-0 services-animation" key="1"><i class="fas fa-globe text-3xl mt-10"></i>
+          <div class="w-1/3 border border-gray-300 rounded h-64 mx-6 text-center relative bottom-0 services-animation" key="1"><i class="fas fa-globe text-3xl mt-10"></i>
             <h3 class="text-xl mt-4">Web Development</h3>
             <p class="font-hairline mt-6 px-10">Coding your site properly with the right technology.</p>
           </div>
-          <div class="w-1/3 border border-gray-400 rounded h-64 mx-6 text-center relative bottom-0 services-animation" key="2"><i class="fas fa-camera text-3xl mt-10"></i>
+          <div class="w-1/3 border border-gray-300 rounded h-64 mx-6 text-center relative bottom-0 services-animation" key="2"><i class="fas fa-camera text-3xl mt-10"></i>
             <h3 class="text-xl mt-4">Photoshoot</h3>
             <p class="font-hairline mt-6 px-10">Graduated from High school in Photography, I can take professional pictures for your projects.</p>
           </div>
@@ -149,18 +149,21 @@
           </div>
         </div>
       </div>
+      <div id="map">
+        <iframe class="w-3/4 m-auto my-24 map-height" title="map" src="https://maps.google.com/maps?q=Place%20de%20la%20Minoterie%2010%201080%20Molenbeek-Saint-Jean%2C%20Belgique&amp;t=&amp;z=19&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameBorder="0" scrolling="yes" marginHeight="0" marginWidth="0"></iframe>
+      </div>
     </div>
     <div class="bg-black relative" id="footer">
       <div class="my-container">
         <div class="flex w-full justify-between pt-32">
-          <p class="text-gray-500">&copy; 2019, Thomas Deman, All Rights Reserved.</p>
+          <p class="text-gray-400">&copy; 2019, Thomas Deman, All Rights Reserved.</p>
           <ul class="flex">
-            <li key="0"><a href="https://www.linkedin.com/in/thomas-deman-168562193/" target="_blank"><i class="fab fa-linkedin-in text-gray-500 text-lg mx-4 hover:text-gray-200"></i></a></li>
-            <li key="1"><a href="mailto:dt.deman.thomas@gmail.com" target="_blank"><i class="fas fa-envelope text-gray-500 text-lg mx-4 hover:text-gray-200"></i></a></li>
-            <li key="2"><a href="https://www.instagram.com/molengeek/" target="_blank"><i class="fab fa-instagram text-gray-500 text-lg mx-4 hover:text-gray-200"></i></a></li>
+            <li key="0"><a href="https://www.linkedin.com/in/thomas-deman-168562193/" target="_blank"><i class="fab fa-linkedin-in text-gray-400 text-lg mx-4 hover:text-gray-100"></i></a></li>
+            <li key="1"><a href="mailto:dt.deman.thomas@gmail.com" target="_blank"><i class="fas fa-envelope text-gray-400 text-lg mx-4 hover:text-gray-100"></i></a></li>
+            <li key="2"><a href="https://www.instagram.com/molengeek/" target="_blank"><i class="fab fa-instagram text-gray-400 text-lg mx-4 hover:text-gray-100"></i></a></li>
           </ul>
         </div>
-      </div><a class="to-header absolute" href="#home"><i class="fas fa-arrow-up text-gray-500 text-2xl hover:text-gray-200"></i></a>
+      </div><a class="to-header absolute" href="#home"><i class="fas fa-arrow-up text-gray-400 text-2xl hover:text-gray-100"></i></a>
     </div>
     <script src="./assets/js/main.js"></script>
   </body>
