adding image for the readme

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
       </div>
     </div>
-    <div class="h-screen" id="services">
+    <div id="services">
           <div class="w-full text-center">
             <h2 class="text-3xl mt-20 subtitles relative inline-block">What I Do</h2>
           </div>
@@ -109,15 +109,15 @@
       <div class="my-container">
         <div class="flex w-full mt-24">
           <div class="w-1/3 pt-8 px-10">
-            <div class="my-8">
+            <div class="my-8" key="0">
               <p class="text-lg">Phone:</p>
               <p class="text-gray-600 font-light">Ask me by mail</p>
             </div>
-            <div class="my-8">
+            <div class="my-8" key="1">
               <p class="text-lg">Email:</p>
               <p class="text-gray-600 font-light">dt.deman.thomas@gmail.com</p>
             </div>
-            <div class="my-8">
+            <div class="my-8" key="2">
               <p class="text-lg">Address:</p>
               <p class="text-gray-600 font-light">Place de la Minoterie 10, 1080 Molenbeek-Saint-Jean (Molengeek)</p>
             </div>
