--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <div class="w-full h-screen my-bg" id="home">
+    <section class="w-full h-screen my-bg" id="home">
       <div class="h-20 w-full fixed top-0" id="navbar">
-        <div class="my-container justify-between flex h-20 m-auto py-6">
-          <h2 class="ml-8 text-2xl title text-white">TD</h2>
-          <ul class="flex justify-around w-2/5">
-            <li key="0"><a class="text-xs text-white hover:text-gray-500" href="#home">HOME</a></li>
-            <li key="1"><a class="text-xs text-white hover:text-gray-500" href="#about">ABOUT</a></li>
-            <li key="2"><a class="text-xs text-white hover:text-gray-500" href="#portfolio">PORTFOLIO</a></li>
-            <li key="3"><a class="text-xs text-white hover:text-gray-500" href="#services">SERVICES</a></li>
-            <li key="4"><a class="text-xs text-white hover:text-gray-500" href="#contact">CONTACT</a></li>
-          </ul>
+        <div class="my-container">
+          <div class="justify-between flex h-20 m-auto py-6">
+            <h2 class="ml-8 text-2xl title text-white">TD</h2>
+            <ul class="flex justify-around w-2/5">
+              <li key="0"><a class="text-xs text-white hover:text-gray-500" href="#home">HOME</a></li>
+              <li key="1"><a class="text-xs text-white hover:text-gray-500" href="#about">ABOUT</a></li>
+              <li key="2"><a class="text-xs text-white hover:text-gray-500" href="#portfolio">PORTFOLIO</a></li>
+              <li key="3"><a class="text-xs text-white hover:text-gray-500" href="#services">SERVICES</a></li>
+              <li key="4"><a class="text-xs text-white hover:text-gray-500" href="#contact">CONTACT</a></li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="w-full pt-48">
@@ -32,61 +34,65 @@
         <h1 class="text-4xl tracking-wide text-white mt-6 font-medium animated fadeInUp slow">Thomas Deman</h1>
         <p class="text-white font-hairline animated fadeInUp slow">Web Developer</p>
       </div><a href="#about"><i class="fas fa-arrow-down text-2xl text-white absolute my-arrow hover:text-gray-400"></i></a>
-    </div>
-    <div class="w-full" id="about">
+    </section>
+    <section class="w-full" id="about">
           <div class="w-full text-center">
             <h2 class="text-3xl mt-20 subtitles relative inline-block">About Me</h2>
           </div>
-      <div class="flex justify-around pt-32 my-container">
-        <div class="w-1/3 px-8">
-          <p class="font-hairline leading-relaxed text-gray-800">Welcome to my Portfolio ! I'm a Junior web developer from Brussels, Belgium. I just finished a 6 months intensive full-stack web development formation. I've learned different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php, Wordpress and Laravel.</p>
-        </div>
-        <div class="w-1/3 px-8">
-          <p class="font-hairline leading-relaxed text-gray-800">I'm interested in the entire front-end spectrum of web development. I'm a well organised person, independant with high attention to detail. I'm naturally curious, and perpetually working on improving my skills.</p>
-        </div>
-        <div class="w-1/3 px-5">
-          <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="0">
-            <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 96%">Html/Css (Sass)</div>
+      <div class="my-container">
+        <div class="flex justify-around mt-32">
+          <div class="w-1/3 px-8">
+            <p class="font-hairline leading-relaxed text-gray-800">Welcome to my Portfolio ! I'm a Junior web developer from Brussels, Belgium. I just finished a 6 months intensive full-stack web development formation. I've learned different languages and frameworks : Html / Css, Javascript / DOM, React, Bash, Php, Wordpress and Laravel.</p>
           </div>
-          <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="1">
-            <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 88%">Javascript</div>
+          <div class="w-1/3 px-8">
+            <p class="font-hairline leading-relaxed text-gray-800">I'm interested in the entire front-end spectrum of web development. I'm a well organised person, independant with high attention to detail. I'm naturally curious, and perpetually working on improving my skills.</p>
           </div>
-          <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="2">
-            <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 85%">React/Vue</div>
-          </div>
-          <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="3">
-            <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 80%">Wordpress</div>
-          </div>
-          <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="4">
-            <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 75%">PHP</div>
+          <div class="w-1/3 px-5">
+            <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="0">
+              <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 96%">Html/Css (Sass)</div>
+            </div>
+            <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="1">
+              <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 88%">Javascript</div>
+            </div>
+            <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="2">
+              <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 85%">React/Vue</div>
+            </div>
+            <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="3">
+              <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 80%">Wordpress</div>
+            </div>
+            <div class="shadow w-5/6 bg-gray-200 rounded mb-5" key="4">
+              <div class="bg-gray-800 text-xs text-center text-white rounded" style="width: 75%">PHP</div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="my-container flex justify-around pt-24">
-        <div class="text-center" key="0">
-          <p class="text-3xl font-thin">1160</p>
-          <p class="font-hairline">Hours of Code</p>
-        </div>
-        <div class="text-center" key="1">
-          <p class="text-3xl font-thin">80</p>
-          <p class="font-hairline">Hours of Meetings</p>
-        </div>
-        <div class="text-center" key="2">
-          <p class="text-3xl font-thin">25</p>
-          <p class="font-hairline">Projects Done</p>
-        </div>
-        <div class="text-center" key="3">
-          <p class="text-3xl font-thin">100</p>
-          <p class="font-hairline">Hours of Research</p>
+      <div class="my-container">
+        <div class="flex justify-around mt-24 mb-32">
+          <div class="text-center" key="0">
+            <p class="text-3xl font-thin">1160</p>
+            <p class="font-hairline">Hours of Code</p>
+          </div>
+          <div class="text-center" key="1">
+            <p class="text-3xl font-thin">80</p>
+            <p class="font-hairline">Hours of Meetings</p>
+          </div>
+          <div class="text-center" key="2">
+            <p class="text-3xl font-thin">25</p>
+            <p class="font-hairline">Projects Done</p>
+          </div>
+          <div class="text-center" key="3">
+            <p class="text-3xl font-thin">100</p>
+            <p class="font-hairline">Hours of Research</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div id="services">
+    </section>
+    <section id="services">
           <div class="w-full text-center">
             <h2 class="text-3xl mt-20 subtitles relative inline-block">What I Do</h2>
           </div>
       <div class="my-container">
-        <div class="flex mt-32 w-full justify-between">
+        <div class="flex my-32 w-full justify-between">
           <div class="w-1/3 border border-gray-300 rounded h-64 mx-6 text-center relative bottom-0 services-animation" key="0"><i class="fas fa-pencil-alt text-3xl mt-10"></i>
             <h3 class="text-xl mt-4">Web Design</h3>
             <p class="font-hairline mt-6 px-10">Building modern web design for your site or web Application</p>
@@ -101,8 +107,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="w-full" id="contact">
+    </section>
+    <section class="w-full" id="contact">
           <div class="w-full text-center">
             <h2 class="text-3xl mt-20 subtitles relative inline-block">Contact</h2>
           </div>
@@ -126,20 +132,20 @@
             <form>
               <div class="flex m-4">
                 <div class="w-1/2 mr-8">
-                  <input class="w-full border border-gray-400 p-4 bg-transparent" placeholder="Name"/>
+                  <input class="w-full border border-gray-400 p-4 bg-transparent" placeholder="Name" type="text" required="required"/>
                 </div>
                 <div class="w-1/2">
-                  <input class="w-full border border-gray-400 p-4 bg-transparent" placeholder="Email"/>
+                  <input class="w-full border border-gray-400 p-4 bg-transparent" placeholder="Email" type="email" required="required"/>
                 </div>
               </div>
               <div class="flex m-4">
                 <div class="w-full">
-                  <input class="w-full border border-gray-400 p-4 bg-transparent" placeholder="Subject"/>
+                  <input class="w-full border border-gray-400 p-4 bg-transparent" placeholder="Subject" type="text" required="required"/>
                 </div>
               </div>
               <div class="flex m-4">
                 <div class="w-full">
-                  <textarea class="w-full border border-gray-400 p-4 bg-transparent" placeholder="Message" rows="8"></textarea>
+                  <textarea class="w-full border border-gray-400 p-4 bg-transparent" placeholder="Message" rows="8" required="required"></textarea>
                 </div>
               </div>
               <div class="flex justify-end m-4">
@@ -152,8 +158,8 @@
       <div id="map">
         <iframe class="w-3/4 m-auto my-24 map-height" title="map" src="https://maps.google.com/maps?q=Place%20de%20la%20Minoterie%2010%201080%20Molenbeek-Saint-Jean%2C%20Belgique&amp;t=&amp;z=19&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameBorder="0" scrolling="yes" marginHeight="0" marginWidth="0"></iframe>
       </div>
-    </div>
-    <div class="bg-black relative" id="footer">
+    </section>
+    <section class="bg-black relative" id="footer">
       <div class="my-container">
         <div class="flex w-full justify-between pt-32">
           <p class="text-gray-400">&copy; 2019, Thomas Deman, All Rights Reserved.</p>
@@ -164,7 +170,7 @@
           </ul>
         </div>
       </div><a class="to-header absolute" href="#home"><i class="fas fa-arrow-up text-gray-400 text-2xl hover:text-gray-100"></i></a>
-    </div>
+    </section>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
