js done for active navbar

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   </head>
   <body>
     <section class="w-full h-screen my-bg" id="home">
-      <div class="h-20 w-full fixed top-0" id="navbar">
+      <div class="h-20 w-full fixed top-0 z-50" id="navbar">
         <div class="my-container">
           <div class="justify-between flex h-20 m-auto py-6">
             <h2 class="ml-8 text-2xl title text-white">TD</h2>
             <ul class="flex justify-around w-2/5">
-              <li key="0"><a class="text-xs text-white hover:text-gray-500" href="#home">HOME</a></li>
-              <li key="1"><a class="text-xs text-white hover:text-gray-500" href="#about">ABOUT</a></li>
-              <li key="2"><a class="text-xs text-white hover:text-gray-500" href="#portfolio">PORTFOLIO</a></li>
-              <li key="3"><a class="text-xs text-white hover:text-gray-500" href="#services">SERVICES</a></li>
-              <li key="4"><a class="text-xs text-white hover:text-gray-500" href="#contact">CONTACT</a></li>
+              <li key="0"><a class="text-xs text-white hover:text-gray-500 links" href="#home">HOME</a></li>
+              <li key="1"><a class="text-xs text-white hover:text-gray-500 links" href="#about">ABOUT</a></li>
+              <li key="2"><a class="text-xs text-white hover:text-gray-500 links" href="#portfolio">PORTFOLIO</a></li>
+              <li key="3"><a class="text-xs text-white hover:text-gray-500 links" href="#services">SERVICES</a></li>
+              <li key="4"><a class="text-xs text-white hover:text-gray-500 links" href="#contact">CONTACT</a></li>
             </ul>
           </div>
         </div>
@@ -164,12 +164,12 @@
         <div class="flex w-full justify-between pt-32">
           <p class="text-gray-400">&copy; 2019, Thomas Deman, All Rights Reserved.</p>
           <ul class="flex">
-            <li key="0"><a href="https://www.linkedin.com/in/thomas-deman-168562193/" target="_blank"><i class="fab fa-linkedin-in text-gray-400 text-lg mx-4 hover:text-gray-100"></i></a></li>
-            <li key="1"><a href="mailto:dt.deman.thomas@gmail.com" target="_blank"><i class="fas fa-envelope text-gray-400 text-lg mx-4 hover:text-gray-100"></i></a></li>
-            <li key="2"><a href="https://www.instagram.com/molengeek/" target="_blank"><i class="fab fa-instagram text-gray-400 text-lg mx-4 hover:text-gray-100"></i></a></li>
+            <li key="0"><a href="https://www.linkedin.com/in/thomas-deman-168562193/" target="_blank"><i class="fab fa-linkedin-in text-gray-400 text-lg mx-4 hover:text-white"></i></a></li>
+            <li key="1"><a href="mailto:dt.deman.thomas@gmail.com" target="_blank"><i class="fas fa-envelope text-gray-400 text-lg mx-4 hover:text-white"></i></a></li>
+            <li key="2"><a href="https://www.instagram.com/molengeek/" target="_blank"><i class="fab fa-instagram text-gray-400 text-lg mx-4 hover:text-white"></i></a></li>
           </ul>
         </div>
-      </div><a class="to-header absolute" href="#home"><i class="fas fa-arrow-up text-gray-400 text-2xl hover:text-gray-100"></i></a>
+      </div><a class="to-header absolute" href="#home"><i class="fas fa-arrow-up text-gray-400 text-2xl hover:text-white"></i></a>
     </section>
     <script src="./assets/js/main.js"></script>
   </body>
