adding js file for increment numbers

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="w-48 h-48 m-auto my-bg rounded-full me-img"></div>
       </div>
       <div class="text-center">
-        <h1 class="text-4xl tracking-wide text-white mt-6 font-medium animated fadeInUp slow">Thomas Deman</h1>
-        <p class="text-white font-hairline animated fadeInUp slow">Web Developer</p>
+        <h1 class="text-4xl tracking-wide text-white mt-6 font-medium animated fadeInUp delay-1s">Thomas Deman</h1>
+        <p class="text-white font-hairline animated fadeInUp delay-2s">Web Developer</p>
       </div><a href="#about"><i class="fas fa-arrow-down text-2xl text-white absolute my-arrow hover:text-gray-400"></i></a>
     </section>
     <section class="w-full" id="about">
@@ -69,19 +69,19 @@
       <div class="my-container">
         <div class="flex justify-around mt-24 mb-32">
           <div class="text-center" key="0">
-            <p class="text-3xl font-thin">1160</p>
+            <p class="text-3xl font-thin number-1"></p>
             <p class="font-hairline">Hours of Code</p>
           </div>
           <div class="text-center" key="1">
-            <p class="text-3xl font-thin">80</p>
+            <p class="text-3xl font-thin number-2"></p>
             <p class="font-hairline">Hours of Meetings</p>
           </div>
           <div class="text-center" key="2">
-            <p class="text-3xl font-thin">25</p>
+            <p class="text-3xl font-thin number-3"></p>
             <p class="font-hairline">Projects Done</p>
           </div>
           <div class="text-center" key="3">
-            <p class="text-3xl font-thin">100</p>
+            <p class="text-3xl font-thin number-4"></p>
             <p class="font-hairline">Hours of Research</p>
           </div>
         </div>
@@ -171,6 +171,6 @@
         </div>
       </div><a class="to-header absolute" href="#home"><i class="fas fa-arrow-up text-gray-400 text-2xl hover:text-white"></i></a>
     </section>
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/main.js" type="module"></script>
   </body>
 </html>
