--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
       <div class="my-container">
         <div class="flex justify-around mt-24 mb-32">
           <div class="text-center" key="0">
-            <p class="text-3xl font-thin number-1"></p>
+            <p class="text-3xl font-thin number"></p>
             <p class="font-hairline">Hours of Code</p>
           </div>
           <div class="text-center" key="1">
-            <p class="text-3xl font-thin number-2"></p>
+            <p class="text-3xl font-thin number"></p>
             <p class="font-hairline">Hours of Meetings</p>
           </div>
           <div class="text-center" key="2">
-            <p class="text-3xl font-thin number-3"></p>
+            <p class="text-3xl font-thin number"></p>
             <p class="font-hairline">Projects Done</p>
           </div>
           <div class="text-center" key="3">
-            <p class="text-3xl font-thin number-4"></p>
+            <p class="text-3xl font-thin number"></p>
             <p class="font-hairline">Hours of Research</p>
           </div>
         </div>
