--- a/index.html
+++ b/index.html
@@ -87,22 +87,90 @@
         </div>
       </div>
     </section>
-    <section class="w-full" id="portfolio">
+    <section class="w-full pb-32" id="portfolio">
           <div class="w-full text-center">
             <h2 class="text-3xl mt-20 subtitles relative inline-block">Portfolio</h2>
           </div>
-      <div class="mt-32" x-data="{ count: 0 }">
-        <ul class="flex w-1/4 m-auto justify-around">
+      <div class="mt-24" x-data="{ count: 0 }">
+        <ul class="flex w-1/4 m-auto justify-around h-32">
           <li key="0">
-            <button class="font-light hover:text-black text-gray-500 mb-32" :class="{ 'text-gray-900 portfolio-links relative inline-block': count === 0 }" @click="count = 0">All</button>
+            <button class="font-light hover:text-black text-gray-500" :class="{ 'text-gray-900 portfolio-links relative inline-block' : count === 0 }" @click="count = 0">All</button>
           </li>
           <li key="1">
-            <button class="font-light hover:text-black text-gray-500 mb-32" :class="{ 'text-gray-900 portfolio-links relative inline-block': count === 1 }" @click="count = 1">Web</button>
+            <button class="font-light hover:text-black text-gray-500" :class="{ 'text-gray-900 portfolio-links relative inline-block' : count === 1 }" @click="count = 1">Web</button>
           </li>
           <li key="2">
-            <button class="font-light hover:text-black text-gray-500 mb-32" :class="{ 'text-gray-900 portfolio-links relative inline-block': count === 2 }" @click="count = 2">Demos</button>
+            <button class="font-light hover:text-black text-gray-500" :class="{ 'text-gray-900 portfolio-links relative inline-block' : count === 2 }" @click="count = 2">Demos</button>
           </li>
         </ul>
+        <div class="w-full flex flex-wrap">
+          <div class="w-1/3 relative"><a href="https://tom-deman.github.io/musician/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/1.png" :class="{
+        'hidden':
+            ( count === 1 ) &amp;&amp; ( 3 === 0 ) ||
+            ( count === 1 ) &amp;&amp; ( 4 === 0 ) ||
+            ( count === 1 ) &amp;&amp; ( 5 === 0 ) ||
+            ( count === 2 ) &amp;&amp; ( 0 === 0 ) ||
+            ( count === 2 ) &amp;&amp; ( 1 === 0 ) ||
+            ( count === 2 ) &amp;&amp; ( 2 === 0 ) ||
+            ( count === 2 ) &amp;&amp; ( 5 === 0 ),
+    }"/>
+              <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Musician</p></a></div>
+          <div class="w-1/3 relative"><a href="https://tom-deman.github.io/agency/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/2.png" :class="{
+        'hidden':
+            ( count === 1 ) &amp;&amp; ( 3 === 1 ) ||
+            ( count === 1 ) &amp;&amp; ( 4 === 1 ) ||
+            ( count === 1 ) &amp;&amp; ( 5 === 1 ) ||
+            ( count === 2 ) &amp;&amp; ( 0 === 1 ) ||
+            ( count === 2 ) &amp;&amp; ( 1 === 1 ) ||
+            ( count === 2 ) &amp;&amp; ( 2 === 1 ) ||
+            ( count === 2 ) &amp;&amp; ( 5 === 1 ),
+    }"/>
+              <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Agency</p></a></div>
+          <div class="w-1/3 relative"><a href="https://tom-deman.github.io/Thomas_Deman/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/3.png" :class="{
+        'hidden':
+            ( count === 1 ) &amp;&amp; ( 3 === 2 ) ||
+            ( count === 1 ) &amp;&amp; ( 4 === 2 ) ||
+            ( count === 1 ) &amp;&amp; ( 5 === 2 ) ||
+            ( count === 2 ) &amp;&amp; ( 0 === 2 ) ||
+            ( count === 2 ) &amp;&amp; ( 1 === 2 ) ||
+            ( count === 2 ) &amp;&amp; ( 2 === 2 ) ||
+            ( count === 2 ) &amp;&amp; ( 5 === 2 ),
+    }"/>
+              <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Photography</p></a></div>
+          <div class="w-1/3 relative"><a href="https://tom-deman.github.io/javascript-pacman/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/4.png" :class="{
+        'hidden':
+            ( count === 1 ) &amp;&amp; ( 3 === 3 ) ||
+            ( count === 1 ) &amp;&amp; ( 4 === 3 ) ||
+            ( count === 1 ) &amp;&amp; ( 5 === 3 ) ||
+            ( count === 2 ) &amp;&amp; ( 0 === 3 ) ||
+            ( count === 2 ) &amp;&amp; ( 1 === 3 ) ||
+            ( count === 2 ) &amp;&amp; ( 2 === 3 ) ||
+            ( count === 2 ) &amp;&amp; ( 5 === 3 ),
+    }"/>
+              <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Js Pacman</p></a></div>
+          <div class="w-1/3 relative"><a href="https://tom-deman.github.io/music/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/5.png" :class="{
+        'hidden':
+            ( count === 1 ) &amp;&amp; ( 3 === 4 ) ||
+            ( count === 1 ) &amp;&amp; ( 4 === 4 ) ||
+            ( count === 1 ) &amp;&amp; ( 5 === 4 ) ||
+            ( count === 2 ) &amp;&amp; ( 0 === 4 ) ||
+            ( count === 2 ) &amp;&amp; ( 1 === 4 ) ||
+            ( count === 2 ) &amp;&amp; ( 2 === 4 ) ||
+            ( count === 2 ) &amp;&amp; ( 5 === 4 ),
+    }"/>
+              <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Music</p></a></div>
+          <div class="w-1/3 relative"><a href="https://tom-deman.github.io/portfolio/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/6.png" :class="{
+        'hidden':
+            ( count === 1 ) &amp;&amp; ( 3 === 5 ) ||
+            ( count === 1 ) &amp;&amp; ( 4 === 5 ) ||
+            ( count === 1 ) &amp;&amp; ( 5 === 5 ) ||
+            ( count === 2 ) &amp;&amp; ( 0 === 5 ) ||
+            ( count === 2 ) &amp;&amp; ( 1 === 5 ) ||
+            ( count === 2 ) &amp;&amp; ( 2 === 5 ) ||
+            ( count === 2 ) &amp;&amp; ( 5 === 5 ),
+    }"/>
+              <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Portfolio</p></a></div>
+        </div>
       </div>
     </section>
     <section id="services">
