--- a/index.html
+++ b/index.html
@@ -92,19 +92,8 @@
             <h2 class="text-3xl mt-20 subtitles relative inline-block">Portfolio</h2>
           </div>
       <div class="mt-24" x-data="{ count: 0 }">
-        <ul class="flex md:w-1/4 w-1/2 m-auto justify-around h-32">
-          <li key="0">
-            <button class="font-light hover:text-black text-gray-500" :class="{ 'text-gray-900 portfolio-links relative inline-block' : count === 0 }" @click="count = 0">All</button>
-          </li>
-          <li key="1">
-            <button class="font-light hover:text-black text-gray-500" :class="{ 'text-gray-900 portfolio-links relative inline-block' : count === 1 }" @click="count = 1">Web</button>
-          </li>
-          <li key="2">
-            <button class="font-light hover:text-black text-gray-500" :class="{ 'text-gray-900 portfolio-links relative inline-block' : count === 2 }" @click="count = 2">Demos</button>
-          </li>
-        </ul>
         <div class="w-5/6 m-auto flex flex-wrap">
-          <div class="md:w-1/3 w-full relative"><a href="https://tom-deman.github.io/musician/" target="_blank"><img class="px-4 mb-8 img-portfolio img-portfolio" src="./assets/img/1.png" :class="{
+          <div class="md:w-1/3 w-full relative"><a href="https://tom-deman.github.io/musician/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/1.png" :class="{
         'hidden':
             ( count === 1 ) &amp;&amp; ( 3 === 0 ) ||
             ( count === 1 ) &amp;&amp; ( 4 === 0 ) ||
@@ -115,7 +104,7 @@
             ( count === 2 ) &amp;&amp; ( 5 === 0 )
     }"/>
               <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Musician</p></a></div>
-          <div class="md:w-1/3 w-full relative"><a href="https://tom-deman.github.io/agency/" target="_blank"><img class="px-4 mb-8 img-portfolio img-portfolio" src="./assets/img/2.png" :class="{
+          <div class="md:w-1/3 w-full relative"><a href="https://tom-deman.github.io/agency/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/2.png" :class="{
         'hidden':
             ( count === 1 ) &amp;&amp; ( 3 === 1 ) ||
             ( count === 1 ) &amp;&amp; ( 4 === 1 ) ||
@@ -126,7 +115,7 @@
             ( count === 2 ) &amp;&amp; ( 5 === 1 )
     }"/>
               <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Agency</p></a></div>
-          <div class="md:w-1/3 w-full relative"><a href="https://tom-deman.github.io/Thomas_Deman/" target="_blank"><img class="px-4 mb-8 img-portfolio img-portfolio" src="./assets/img/3.png" :class="{
+          <div class="md:w-1/3 w-full relative"><a href="https://tom-deman.github.io/e-shop/" target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/3.png" :class="{
         'hidden':
             ( count === 1 ) &amp;&amp; ( 3 === 2 ) ||
             ( count === 1 ) &amp;&amp; ( 4 === 2 ) ||
@@ -136,28 +125,7 @@
             ( count === 2 ) &amp;&amp; ( 2 === 2 ) ||
             ( count === 2 ) &amp;&amp; ( 5 === 2 )
     }"/>
-              <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">Photography</p></a></div>
-          <div class="md:w-1/3 w-full relative"><a href="https://tom-deman.github.io/e-shop/" target="_blank"><img class="px-4 mb-8 img-portfolio img-portfolio" src="./assets/img/4.png" :class="{
-        'hidden':
-            ( count === 1 ) &amp;&amp; ( 3 === 3 ) ||
-            ( count === 1 ) &amp;&amp; ( 4 === 3 ) ||
-            ( count === 1 ) &amp;&amp; ( 5 === 3 ) ||
-            ( count === 2 ) &amp;&amp; ( 0 === 3 ) ||
-            ( count === 2 ) &amp;&amp; ( 1 === 3 ) ||
-            ( count === 2 ) &amp;&amp; ( 2 === 3 ) ||
-            ( count === 2 ) &amp;&amp; ( 5 === 3 )
-    }"/>
               <p class="absolute text-gray-100 text-lg text-medium opacity-0 pointer-events-none">E-shop</p></a></div>
-          <div class="md:w-1/3 w-full relative"><a target="_blank"><img class="px-4 mb-8 img-portfolio" src="./assets/img/5.png" :class="{
-        'hidden':
-            ( count === 1 ) &amp;&amp; ( 3 === 4 ) ||
-            ( count === 1 ) &amp;&amp; ( 4 === 4 ) ||
-            ( count === 1 ) &amp;&amp; ( 5 === 4 ) ||
-            ( count === 2 ) &amp;&amp; ( 0 === 4 ) ||
-            ( count === 2 ) &amp;&amp; ( 1 === 4 ) ||
-            ( count === 2 ) &amp;&amp; ( 2 === 4 ) ||
-            ( count === 2 ) &amp;&amp; ( 5 === 4 )
-    }"/></a></div>
         </div>
       </div>
     </section>
